# nix-jail

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  SANDBOX.md  TESTING.md  build.rs  clippy.toml  docker-compose.yml  grafana-dashboard.json  module.nix  package.nix  rufio-hooks.yaml  server.toml  shell.nix  slides.md  version.toml
.agents/skills/debugging-production/: SKILL.md
.claude/: settings.local.json
.github/workflows/: cargo-ci.yaml  cargo-release.yaml
examples/credentials/: httpbin-demo.toml  osx-claude-code.toml  osx-opencode.toml
examples/network-policies/: anthropic-allow-linux.toml  anthropic-allow.toml  danger-allow-all.toml  github-allow.toml  httpbin-allow.toml  httpbin-demo.toml  opencode-allow.toml
examples/scripts/: bash-env.sh  claude.sh  cowsay-test.sh  curl.sh  flake-test.sh  gh.sh  git-test.sh  pr-claude.sh  pr-test.sh  stream-test.sh
observability/: grafana-datasources.yaml  tempo.yaml
profiles/: cargo.toml  opencode.toml
proto/: jail.proto
scripts/: file.txt  file2.txt  file3.txt  file4.txt  inline-payload.txt  malicious-webpage.html  q3-report.html  unicode-injection-demo.py
src/: config.rs  hashbang.rs  job_dir.rs  job_registry.rs  job_workspace.rs  lib.rs  log_sink.rs  metrics.rs  networkpolicy.rs  orchestration.rs  proxy_manager.rs  root.rs  service.rs  session.rs  storage.rs  streaming.rs  validation.rs
src/cache/: btrfs.rs  mod.rs  snapshots.rs
src/executor/: docker.rs  exec.rs  executor_tests.rs  mod.rs  sandbox.rs  sandbox_policy.rs  systemd.rs  test_helpers.rs  traits.rs  types.rs
src/proxy/: certs.rs  llm.rs  mitm.rs  mod.rs  policy.rs  stats.rs
src/workspace/: cache.rs  config.rs  copy.rs  flake.rs  git.rs  git_refs.rs  mirror.rs  mod.rs  nix.rs  policy.rs  pr.rs
tmp/: claude-2e2f-cwd
